--- a/index.html
+++ b/index.html
@@ -1,21 +1,80 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TITEL_EINGEBEN</title>
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
-  </head>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MTDolomites - Erleben Sie die Schönheit der Dolomiten</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
 
-  <body>
-    <div class="header">header</div>
-    <div class="content">
-      Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-      Lorem ipsum Lorem ipsum Lorem ipsum <br />
-      <a href="./game.html">Zum Game</a>
+<header>
+  <div class="header-container">
+    <div>
+      <img src="images/Logo.png" alt="MTDolomites Logo">
     </div>
-    <div class="footer">footer</div>
-    <script src="./js/index.js"></script>
-  </body>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="touren.html">Unsere Touren</a>
+    </nav>
+  </div>
+</header>
+
+<div class="content">
+  <div class="main">
+    <h1>Erleben Sie die Schönheit der Dolomiten</h1>
+    <p>MTDolomites bietet unvergessliche Bike-, Ski- und Wandertouren in den atemberaubenden Dolomiten. Entdecken Sie die Vielfalt der Landschaft und erleben Sie unvergessliche Abenteuer.</p>
+    <a href="touren.html" class="btn">Jetzt Buchen</a>
+  </div>
+
+  <div class="tours">
+    <div class="tour-box">
+      <img src="images/bike-tour.jpg" alt="Bike Tour">
+      <div class="tour-title">Bike-Touren für alle Schwierigkeitsgrade</div>
+      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
+    </div>
+    <div class="tour-box">
+      <img src="images/ski-tour.jpg" alt="Ski Tour">
+      <div class="tour-title">Ski-Touren für Anfänger und Fortgeschrittene</div>
+      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
+    </div>
+    <div class="tour-box">
+      <img src="images/hiking-tour.jpg" alt="Hiking Tour">
+      <div class="tour-title">Wandertouren durch die beeindruckende Natur</div>
+      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
+    </div>
+  </div>
+</div>
+
+
+<div class="slider-container">
+  <div class="slide"><img src="images/background.png" alt="Bild 1"></div>
+  <div class="slide"><img src="images/bike-tour.jpg"></div>
+  <div class="slide"><img src="images/hintergrundbild.jpg" alt="Bild 3"></div>
+</div>
+
+
+
+<footer>
+  <div class="footer-left">
+    <p style="margin-top: 10px; font-weight: bold;">Adresse:</p>
+    <p style="margin-top: 10px;">Level 1, Hallostrasse 62, Dolomites 2000</p>
+    <p style="margin-top: 10px; font-weight: bold;">Kontakt:</p>
+    <p style="margin-top: 5px;">info@dolomites.com</p>
+    <div style="margin-top: 10px;">
+      <a href="https://www.facebook.com/?locale=de_DE"><img src="images/facebook.png" alt="Facebook Icon"></a>
+      <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram Icon"></a>
+      <a href="https://twitter.com/i/flow/login"><img src="images/twitter.png" alt="X Icon"></a>
+      <a href="https://www.linkedin.com/home/?originalSubdomain=ch"><img src="images/linkedin.png" alt="Linkedin Icon"></a>
+      <a href="https://m.youtube.com/?hl=de&gl=CH"><img src="images/youtube.png" alt="Youtube Icon"></a>
+    </div>
+  </div>
+  <div class="footer-bottom">
+    <hr>
+    <p>© 2024 MTDolomites</p>
+  </div>
+</footer>
+
+
+</body>
 </html>
