--- a/index.html
+++ b/index.html
@@ -1,80 +1,160 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MTDolomites - Erleben Sie die Schönheit der Dolomiten</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MTDolomites - Erleben Sie die Schönheit der Dolomiten</title>
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/hero.css">
+    <link rel="stylesheet" href="css/tours.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/hero-detail.css">
+    <link rel="stylesheet" href="css/game.css">
 </head>
+
 <body>
+    <header>
+        <nav class="navbar">
+            <img src="images/Logo.png" alt="Logo" class="logo">
+            <ul class="nav-links">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="tours.html">Unsere Touren</a></li>
+            </ul>
+            <div class="burger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="hero-text">
+                <h1>Die Schönheit der Dolomiten hautnah erleben</h1>
+                <p>Mit MTDolomites unvergessliche Bike, Ski- und Wandertouren in den atemberaubenden Dolomiten geniessen. Entdecke die Vielfalt der Landschaft und erlebe unvergessliche Abenteuer. </p>
+                <a href="tours.html" class="btn">Jetzt buchen</a>
+            </div>
+        </section>
+        <section class="tours">
+            <div class="tour">
+                <img src="images/bike-tour.jpg" alt="Tour 1">
+                <h3>Mountainbike-Tour</h3>
+                <p>Abwechslungsreiche Mountainbiketouren in den majestätischen Dolomiten: Wo atemberaubende Landschaften und anspruchsvolle Trails auf dich warten. </p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+            <div class="tour">
+                <img src="images/ski-tour.jpg" alt="Tour 2">
+                <h3>Skitour</h3>
+                <p>Verschneite Landschaften bestaunen: Mit den Skiern entlang faszinierender Felswände neue Höhen meistern.</p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+            <div class="tour">
+                <img src="images/hike-tour.jpg" alt="Tour 3">
+                <h3>Wandertour</h3>
+                <p>Zu Fuss meilenweites Panorama erleben: Mit atemberaubenden Ausblicken die Gipfel der Dolomiten erklimmen. </p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+            <div class="tour">
+                <img src="images/rock-climbing-tour.jpg" alt="Tour 4">
+                <h3>Klettertour</h3>
+                <p>Erleben Sie die Dolomiten beim Klettern. Unsere Guides zeigen Ihnen die schönsten Kletterrouten.</p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+            <div class="tour">
+                <img src="images/paragliding-tour.jpg" alt="Tour 5">
+                <h3>Paragliding-Tour</h3>
+                <p>Erleben Sie die Dolomiten vom Himmel aus. Unsere Guides zeigen Ihnen die schönsten Paragliding-Spots.</p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+            <div class="tour">
+                <img src="images/rafting-tour.jpg" alt="Tour 6">
+                <h3>Rafting-Tour</h3>
+                <p>Erleben Sie die Dolomiten auf dem Wasser. Unsere Guides zeigen Ihnen die aufregendsten Rafting-Routen.</p>
+                <a href="tours.html" class="btn">Mehr erfahren</a>
+            </div>
+        </section>
+        <section class="images">
+            <div class="slideshow-container">
+                <div class="mySlides fade">
+                    <img src="images/dolomites1.jpg" style="width:100%">
+                </div>
 
-<header>
-  <div class="header-container">
-    <div>
-      <img src="images/Logo.png" alt="MTDolomites Logo">
-    </div>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="touren.html">Unsere Touren</a>
-    </nav>
-  </div>
-</header>
+                <div class="mySlides fade">
+                    <img src="images/dolomites2.jpg" style="width:100%">
+                </div>
 
-<div class="content">
-  <div class="main">
-    <h1>Erleben Sie die Schönheit der Dolomiten</h1>
-    <p>MTDolomites bietet unvergessliche Bike-, Ski- und Wandertouren in den atemberaubenden Dolomiten. Entdecken Sie die Vielfalt der Landschaft und erleben Sie unvergessliche Abenteuer.</p>
-    <a href="touren.html" class="btn">Jetzt Buchen</a>
-  </div>
+                <div class="mySlides fade">
+                    <img src="images/dolomites3.jpg" style="width:100%">
+                </div>
 
-  <div class="tours">
-    <div class="tour-box">
-      <img src="images/bike-tour.jpg" alt="Bike Tour">
-      <div class="tour-title">Bike-Touren für alle Schwierigkeitsgrade</div>
-      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
-    </div>
-    <div class="tour-box">
-      <img src="images/ski-tour.jpg" alt="Ski Tour">
-      <div class="tour-title">Ski-Touren für Anfänger und Fortgeschrittene</div>
-      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
-    </div>
-    <div class="tour-box">
-      <img src="images/hiking-tour.jpg" alt="Hiking Tour">
-      <div class="tour-title">Wandertouren durch die beeindruckende Natur</div>
-      <p>Hallo 123 alskdjfalskdjfalök das ist der Text alskdjflaskdjf jslkdfj lkvnsrösdkflköfLEKJRölskajslkdjf</p>
-    </div>
-  </div>
-</div>
+                <!-- Add more slides as needed -->
 
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br>
 
-<div class="slider-container">
-  <div class="slide"><img src="images/background.png" alt="Bild 1"></div>
-  <div class="slide"><img src="images/bike-tour.jpg"></div>
-  <div class="slide"><img src="images/hintergrundbild.jpg" alt="Bild 3"></div>
-</div>
-
-
-
-<footer>
-  <div class="footer-left">
-    <p style="margin-top: 10px; font-weight: bold;">Adresse:</p>
-    <p style="margin-top: 10px;">Level 1, Hallostrasse 62, Dolomites 2000</p>
-    <p style="margin-top: 10px; font-weight: bold;">Kontakt:</p>
-    <p style="margin-top: 5px;">info@dolomites.com</p>
-    <div style="margin-top: 10px;">
-      <a href="https://www.facebook.com/?locale=de_DE"><img src="images/facebook.png" alt="Facebook Icon"></a>
-      <a href="https://www.instagram.com/"><img src="images/instagram.png" alt="Instagram Icon"></a>
-      <a href="https://twitter.com/i/flow/login"><img src="images/twitter.png" alt="X Icon"></a>
-      <a href="https://www.linkedin.com/home/?originalSubdomain=ch"><img src="images/linkedin.png" alt="Linkedin Icon"></a>
-      <a href="https://m.youtube.com/?hl=de&gl=CH"><img src="images/youtube.png" alt="Youtube Icon"></a>
-    </div>
-  </div>
-  <div class="footer-bottom">
-    <hr>
-    <p>© 2024 MTDolomites</p>
-  </div>
-</footer>
-
-
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(0)"></span>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <!-- Add more dots as needed -->
+            </div>
+        </section>
+        <h1>Gewinnspiel</h1>
+        <p>Mit etwas Glück kannst du eine Tour deiner Wahl gewinnen. </p>
+        <section class="game">
+            <div id="tic-tac-toe-board">
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+                <div class="cell"></div>
+            </div>
+            <div id="overlay" class="hidden"></div>
+            <div id="popup" class="hidden">
+                <h2 id="popup-message"></h2>
+                <button id="popup-button">OK</button>
+            </div>
+            <button id="restart-button">Restart</button>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-content">
+            <div class="contact-info">
+                <h3>Adresse:</h3>
+                <p>S.da Nives, 36, 39048 Selva di Val Gardena </p>
+                <h3>Kontakt:</h3>
+                <p>info@mtdolomites.it</p>
+            </div>
+            <div class="social-media">
+                <h3>Folge uns</h3>
+                <a href="https://www.facebook.com" target="_blank"><img src="images/sozialmedia/facebook.png"
+                        alt="Facebook"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="images/sozialmedia/instagram.png"
+                        alt="Instagram"></a>
+                <a href="https://www.linkedin.com" target="_blank"><img src="images/sozialmedia/linkedin.png"
+                        alt="LinkedIn"></a>
+                <a href="https://www.youtube.com" target="_blank"><img src="images/sozialmedia/youtube.png"
+                        alt="YouTube"></a>
+            </div>
+            <div class="copyright">
+                <hr>
+                <p>2024 MTDolomites | Gruppe 1:  Reichlin & Tita | Das ist ein Schulprojekt und keine reale Webseite</p>
+            </div>
+        </div>
+    </footer>
+    <script src="js/index.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/slider.js"></script>
+    <script src="js/game.js"></script>
 </body>
+
 </html>
